[package]
name = "usbd-audio"
description = "USB Audio 1.0 class for usb-device"
authors = ["Stephan <kiffie@mailbox.org>"]
version = "0.1.0"
edition = "2021"
readme = "README.md"
repository = "https://github.com/kiffie/usbd-audio"
keywords = ["no-std", "usb-device", "pic32", "rp2040"]
license = "MIT OR Apache-2.0"
include = ["README.md", "/src", "LICENSE"]

[dependencies]
usb-device = "0.2.8"
