[package]
name = "usb-audio-example"
version = "0.1.0"
authors = ["Stephan <kiffie@mailbox.org>"]
license = "MIT OR Apache-2.0"
edition = "2021"

[dependencies]
mips-rt = "0.3.0"
alloc-pic32 = { git = "https://github.com/kiffie/alloc-pic32.git" }
embedded-hal = "0.2.6"
pic32-hal = { version = "0.6.1", features = ["pic32mx2xxfxxxb", "usb-device"] }
panic-halt = "0.2.0"
usb-device = { version = "0.2.8", features = ["control-buffer-256"] }
usbd-audio = "0.1.0"
pic32-config-sector = "0.1.2"

[profile.release]
opt-level = 2
lto = true
debug = true

[profile.dev]
opt-level = 2
lto = true
debug = true
