[package]
name = "usb-audio"
version = "0.1.0"
authors = ["Kiffie van Haash"]
license = "MIT OR Apache-2.0"
edition = "2021"

[features]

[dependencies]
critical-section = "1.2"
cortex-m = "0.7.3"
cortex-m-rt = "0.7.0"
rp2040-hal = { version = "0.11", features = ["rt", "critical-section-impl"] }
rp2040-boot2 = "0.2.0"
embedded-hal = "0.2.6"
panic-halt = "0.2.0"
usb-device = { version = "0.3", features = ["control-buffer-256"] }
usbd-audio = { path = "../.." }

log = "0.4.14"

[profile.release]
opt-level = 2
lto = true
debug = true

[profile.dev]
opt-level = 2
lto = true
